tests/NormalTests/paczka1/small_fuzzy/17888959.err
Error in line 5: A567 S755 5,3
Error in line 1: eB94lXuXK A567 57,5
